Committing with passing tests and refactored to use JsonWriter!